--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.182.0",
-    "occt-import-js": "^0.0.23",
+    "occt-import-js": "0.0.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "three": "^0.182.0",
