--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.182.0",
+    "lucide-react": "^0.563.0",
     "occt-import-js": "0.0.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
